[tool.poetry]
name = "systems"
version = "0.1.0"
description = "Systems code for Relectric car team."
authors = ["Relectric Car Team <info@teamrelectric.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.1"
pyzmq = "^22.0.3"
attrs = "^21.2.0"
loguru = "^0.5.3"
pydoc-markdown = {version = "^3.10.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-xdist = "^2.2.1"
pre-commit = "^2.12.1"
black = "^21.9b0"
isort = "^5.9.3"
pyinstaller = "^4.3"

[tool.poetry.extras]
docs = ["pydoc-markdown"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
