[tool.poetry]
name = "systems"
version = "0.1.0"
description = "Systems code for Relectric car team."
authors = ["Relectric Car Team <info@teamrelectric.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.1"
pyzmq = "^22.0.3"
attrs = "^21.2.0"
loguru = "^0.5.3"
pydoc-markdown = {version = "^3.10.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-xdist = "^2.2.1"
pre-commit = "^3.0.0"
yapf = "^0.31.0"
pyinstaller = "^4.3"

[tool.poetry.extras]
docs = ["pydoc-markdown"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 4
line_length = 79
include_trailing_comma = true

[tool.yapf]
based_on_style = "google"
spaces_before_comment = 4
split_before_logical_operator = true
column_limit = 79
